--- a/package.json
+++ b/package.json
@@ -29,21 +29,33 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.1",
     "compromise": "^14.14.4",
+    "d3-force-3d": "^3.0.6",
     "fast-xml-parser": "^5.3.0",
+    "gl-matrix": "^3.4.4",
     "graphology": "^0.26.0",
     "graphology-shortest-path": "^2.1.0",
     "lodash": "^4.17.21",
+    "lru-cache": "^11.2.2",
     "marked": "^16.4.0",
     "natural": "^8.1.0",
+    "node-cache": "^5.1.2",
+    "prom-client": "^15.1.3",
+    "rbush-3d": "^0.0.4",
     "sentiment": "^5.0.2",
-    "stopword": "^3.1.5"
+    "split2": "^4.2.0",
+    "stopword": "^3.1.5",
+    "through2": "^4.0.2",
+    "webcola": "^3.4.0"
   },
   "devDependencies": {
+    "@types/gl-matrix": "^2.4.5",
     "@types/lodash": "^4.17.20",
     "@types/marked": "^5.0.2",
     "@types/natural": "^5.1.5",
     "@types/node": "^24.8.1",
     "@types/sentiment": "^5.0.4",
+    "@types/split2": "^4.2.3",
+    "@types/through2": "^2.0.41",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
